--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "^4.18.2",
     "http-status": "^1.7.0",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.2",
     "otp-generator": "^4.0.1"
   },
   "devDependencies": {
